k8s/services/media/app/lidarr/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: lidarr
          image: ghcr.io/hotio/lidarr
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8686
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: lidarr-data
        - name: media
          persistentVolumeClaim:
            claimName: media
      nodeSelector:
        k8s.as212024.net/role: media
      tolerations:
        - key: k8s.as212024.net/role
          operator: Equal
          value: media
          effect: NoExecute
