k8s/services/media/app/lidarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
spec:
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
